@startuml

class Chart2DContentViewModel {
    + Title : string <<get>>
    + AxisXLabel : string <<get>>
    + AxisYLabel : string <<get>>
    + RenderData : ICollection<IRenderData> <<get>>
    + Chart2DContentViewModel(title:string, axisXLabel:string, axisYLabel:string, content:IEnumerable<IRenderData>)
    + Dispose() : void
}
IDisposable <|-- Chart2DContentViewModel

class DynamicReconV2Module {
    + RegisterTypes(containerRegistry:IContainerRegistry) : void
    + OnInitialized(containerProvider:IContainerProvider) : void
}
IModule <|-- DynamicReconV2Module

class DynamicReconV2Params {
    + Run(ionData:IIonData, options:DynamicReconV2ParamsOptions) : DynamicReconV2Results?
    + {static} LambertW(x:double) : double
}
struct stcData {
    + Nat : int
    + V : double
}
DynamicReconV2Params +-- stcData

class DynamicReconV2ParamsNode {
    + {static} DisplayInfo : NodeDisplayInfo <<get>>
    + <<const>> UniqueId : string = "GPM.CustomAnalysis.DynamicReconV2.DynamicReconV2ParamsNode"
    - <<readonly>> dynamicReconV2Param : DynamicReconV2Params
    + Options : DynamicReconV2ParamsOptions <<get>>
    + DynamicReconV2ParamsNode(services:IAnalysisNodeBaseServices)
    + <<async>> Run() : Task<DynamicReconV2Results?>
    # <<override>> GetSaveContent() : byte[]?
    # <<override>> OnCreated(eventArgs:NodeCreatedEventArgs) : void
    - OptionsOnPropertyChanged(sender:object?, e:PropertyChangedEventArgs) : void
}
class NodeDisplayInfo {
    + Title : string <<get>> = "GPM Dynamic Recon Params"
    + Icon : ImageSource? <<get>> = null
}
AnalysisNodeBase <|-- DynamicReconV2ParamsNode
DynamicReconV2ParamsNode +-- NodeDisplayInfo
INodeDisplayInfo <|-- NodeDisplayInfo

class DynamicReconV2ParamsNodeMenuFactory {
    + <<const>> UniqueId : string = "GPM.CustomAnalysis.DynamicReconV2.DynamicReconV2ParamsNodeMenuFactory"
    - <<readonly>> _eventAggregator : IEventAggregator
    + DynamicReconV2ParamsNodeMenuFactory(eventAggregator:IEventAggregator)
    + CreateMenuItem(context:IAnalysisMenuContext) : IMenuItem
    + Location : AnalysisMenuLocation <<get>>
}
IAnalysisMenuFactory <|-- DynamicReconV2ParamsNodeMenuFactory

class DynamicReconV2ParamsOptions {
    - initialKF : float = 5.6f
    - initialKSI : float = 1.6f
    - inputVoltageCSV : string = @"D:\Cameca\R73_03003 Voltage History.csv"
    - outputParameterData : string = @"D:\Cameca\Parameters_Evolution.dat"
    + InitialKF : float <<get>> <<set>>
    + InitialKSI : float <<get>> <<set>>
    + InputVoltageCSV : string <<get>> <<set>>
    + OutputParameterData : string <<get>> <<set>>
}
BindableBase <|-- DynamicReconV2ParamsOptions

class DynamicReconV2ParamsView <<partial>> {
    + DynamicReconV2ParamsView()
}

class DynamicReconV2ParamsViewModel {
    + <<const>> UniqueId : string = "GPM.CustomAnalysis.DynamicReconV2.DynamicReconV2ParamsViewModel"
    - <<readonly>> renderDataFactory : IRenderDataFactory
    - optionsChanged : bool = false
    - <<readonly>> runCommand : AsyncRelayCommand
    + RunCommand : ICommand <<get>>
    + Options : DynamicReconV2ParamsOptions <<get>>
    + Tabs : ObservableCollection<object> <<get>>
    - selectedTab : object?
    + SelectedTab : object? <<get>> <<set>>
    + DynamicReconV2ParamsViewModel(services:IAnalysisViewModelBaseServices, renderDataFactory:IRenderDataFactory)
    # <<override>> OnCreated(eventArgs:ViewModelCreatedEventArgs) : void
    - <<async>> OnRun() : Task
    - OptionsOnPropertyChanged(sender:object?, e:PropertyChangedEventArgs) : void
    - UpdateSelectedEventCountsEnabled() : bool
}
"AnalysisViewModelBase`1" "<DynamicReconV2ParamsNode>" <|-- DynamicReconV2ParamsViewModel

class DynamicReconV2Results {
    + Voltage : Vector3[] <<get>> <<init>>
    + FieldFactor : Vector3[] <<get>> <<init>>
    + ICF : Vector3[] <<get>> <<init>>
    + NormalizedFieldFactor : Vector3[] <<get>> <<init>>
    + NormalizedICF : Vector3[] <<get>> <<init>>
}

@enduml
